# watermark-stealing-replication

./: .gitignore  README.md  justfile  pyproject.toml
notebooks/: spoof_attack_analysis.ipynb
scripts/: generate_samples.py  mark_green_red_tokens.py  spoof_attack.py  spoof_attack.yaml  test_watermark.py
src/: kgw.py  lm.py
web/: app.py  examples.json  graph_data.csv  graph_data_b0.csv
