[project]
name = "watermark-stealing-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "ipykernel>=6.30.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
    "datasets>=2.20.0",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
    "flash-attn>=2.8.3",
    "wandb>=0.21.1",
    "altair>=5.5.0",
    "polars>=1.32.3",
]
